# Gauntlet_agent

./: .env.example  .gitignore  SETUP.md  claude-progress.md  feature_list.json  proud_session.md  pyproject.toml
codeindex/: context.py  graph.py
codescan/: investigate.py  static.py
core/: findings.py  pyproject.toml
core/codeindex/: __init__.py  index.py  probe.py  query.py
core/codescan/: __init__.py  investigate.py  static.py
core/judge/: _llm.py  agent.py  ingest.py  querytrace.py  redact.py  verify.py
deploy/: Caddyfile  README.md  bootstrap.sh  gauntlet.service  modal_infer.py
docs/agent-context/: manual-workflow-generation-usage.md  ui-product-context.md  ui-progress-log.md  workflow-generation-mvp-plan.md  workflow-sandbox-association-plan.md
fixer/: __init__.py  base.py  codex.py  job.py  loop.py  output.py
gauntlet/: __init__.py  app.py  build_resolver.py  config.py  docker_vm.py  fix.py  github.py  microvm.py  runner.py  store.py
gauntlet/workflows/: __init__.py  api_models.py  generate.py  graph.py  harness.py  llm_planner.py  mcp_probe.py  operations.py  probe.py  quality.py  rules_planner.py  schema.py  select.py  service_map.py  validate.py
judge/: README.md  __init__.py  agent.py  analyze.py  ingest.py  trace.py
migrations/: 0001_backend.sql  0002_workflow_runs.sql  0003_sandboxes.sql  0004_sandbox_workflows_runs.sql  0005_run_review.sql  0006_sandbox_scenarios.sql  0007_reusable_workflows.sql  0007_sandbox_env_vars.sql  0008_workflows_user_id_default.sql  0009_fixes.sql
proxy/: addon.py  routing.example.json
sandbox/: harness.py  orchestrator.py
scripts/: generate_workflows.py
slack-bot-agent/: .gauntlet.json  agent.py
tests/: test_agent_visible_workflow.py  test_proxy.py  test_twin.py  test_twins.py  test_workflow_generation.py
twins/: engine.py  replay_server.py  spec_registry.py  twin_server.py
twins/registry/excel/v1/: openapi.json  seed.json
twins/registry/github/v3/: openapi.json  seed.json
twins/registry/gmail/v1/: openapi.json  seed.json
twins/registry/google_calendar/v3/: openapi.json  seed.json
twins/registry/hubspot/v3/: openapi.json  seed.json
twins/registry/resend/v1/: openapi.json  seed.json
twins/registry/slack/v1/: openapi.json
twins/registry/stripe/2022-11-15/: openapi.json  seed.json
twins/registry/twilio/2010-04-01/: openapi.json  seed.json
twins/registry/widgets/v1/: openapi.json  seed.json
twins/services/: excel.py  gmail.py  google_calendar.py  hubspot.py  slack.py  stripe.py  twilio.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx
web/src/app/api/runs/: route.ts
web/src/app/api/sandboxes/: route.ts
web/src/app/api/session/: route.ts
web/src/app/api/workflows/: route.ts
web/src/app/auth/callback/: page.tsx
web/src/app/fixes/: page.tsx
web/src/app/login/: page.tsx
web/src/app/logout/: page.tsx
web/src/app/runs/: page.tsx
web/src/app/sandboxes/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/workflows/: page.tsx
web/src/components/: app-shell.tsx  create-sandbox-sheet.tsx  fixes-workspace.tsx  run-detail.tsx  run-status-badge.tsx  runs-workspace.tsx  sandbox-detail.tsx  sandbox-store.tsx  sandboxes-workspace.tsx  settings-workspace.tsx  workflows-workspace.tsx
web/src/components/ui/: sheet.tsx
web/src/lib/: auth-redirect.ts  mock-data.ts  sandbox-api.ts  supabase.ts
web/src/lib/server/: gauntlet-backend.ts  generate.ts  review.ts  sandbox-map.ts  supabase.ts  workflow-dedupe.ts  workflow-map.ts
(+19 files in other folders)
