[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gauntlet-agent"
version = "0.1.0"
description = "Run a customer's checked-out commit in an ephemeral AWS Lambda MicroVM, report via GitHub Checks."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "boto3",
    "pyjwt[crypto]",
    "jsonschema",
    "mitmproxy",
    "psycopg[binary]",
    "psycopg-pool",
]
# NOTE: gauntlet-core (./core) is NOT listed above on purpose — it's a local editable package,
# not a PyPI dist, so listing it makes pip try the index and fail. It's installed separately
# and FIRST (bootstrap.sh: `pip install -e ./core`), which satisfies the imports.

# Explicit package list — the repo is a flat layout with data dirs (migrations,
# twins/registry, deploy), so auto-discovery can't guess. Editable install links
# to the source, so twins' JSON registry etc. resolve via __file__ at runtime.
[tool.setuptools.packages.find]
include = ["gauntlet*", "sandbox*", "twins*", "proxy*", "fixer*"]  # judge/codescan/codeindex/findings now in gauntlet-core (./core)

# Run locally:  uvicorn gauntlet.app:app --reload --port 8000
